prod_snapshot_2015-09-24_1030/objects/Automated_Rate_Calculation__c.object
<CustomObject>
    <description>Automated Rate Calculation for Products whose list price is determine on more than 1 entry field on Add Products Page. 

This handles a 2 dimension pricing chart 

eg: Email Standard Blast -   Number of Email Blast &amp; Number of Email Recipients</description>
    <fields>
        <fullName>APIOnly_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>APIOnly ExternalId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Column_End_Range__c</fullName>
        <description>Represent : End Range Email Recipients - for email blast products</description>
        <label>Column End Range</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Column_Start_Range__c</fullName>
        <description>Represent : Start Range Email Recipients - For Email Blast Products</description>
        <label>Column Start Range</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MatrixResult__c</fullName>
        <description>Unit Price for 2 dimensional variables</description>
        <label>MatrixResult</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Price Book</description>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Automated Rate Calculation</relationshipLabel>
        <relationshipName>Automated_Rate_Calculation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship to Product Object</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Automated Rate Calculation</relationshipLabel>
        <relationshipName>Automated_Rate_Calculation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_End_Range__c</fullName>
        <description>Represent : End Range Email Blast - for Email Blast Products</description>
        <label>Row End Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Row_Start_Range__c</fullName>
        <description>Represent : Start Range Email Blast - for Email Blast Products</description>
        <label>Row Start Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Automated Rate Calculation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Rates</fullName>
        <columns>NAME</columns>
        <columns>Price_Book__c</columns>
        <columns>Product__c</columns>
        <columns>MatrixResult__c</columns>
        <columns>Row_Start_Range__c</columns>
        <columns>Row_End_Range__c</columns>
        <columns>Column_End_Range__c</columns>
        <columns>Column_Start_Range__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Rates</label>
    </listViews>
    <nameField>
        <label>Automated Rate Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated Rate Calculation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>